fix overflow x

--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,59 @@
     font-style: normal;
   }
 
+:root {
+    --primary-color: rgb(47, 146, 179);
+}
+
+/* 1. Use a more-intuitive box-sizing model */
 *, *::before, *::after {
-box-sizing: border-box;
-}
-* {
-margin: 0;
-}
+    box-sizing: border-box;
+  }
+  
+  /* 2. Remove default margin */
+  * {
+    margin: 0;
+  }
+  
+  body {
+    /* 3. Add accessible line-height */
+    line-height: 1.5;
+    /* 4. Improve text rendering */
+    -webkit-font-smoothing: antialiased;
+  }
+  
+  /* 5. Improve media defaults */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  
+  /* 6. Inherit fonts for form controls */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  
+  /* 7. Avoid text overflows */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  
+  /* 8. Improve line wrapping */
+  p {
+    text-wrap: pretty;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    text-wrap: balance;
+  }
+  
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
+
+
 body {
 line-height: 1.5;
 -webkit-font-smoothing: antialiased;
@@ -34,24 +81,26 @@ a {
     color: black;
 }
 
+* {
+    outline: 1px solid rgba(255, 0, 0, 0.2); /* Временно помогает увидеть границы всех элементов */
+}
 body {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     font-size: 14px;
+    overflow-x: hidden;
 
     align-items: center;
     font-family: 'Roboto';
+    /* max-width: 110vw; */
+    
 }
 
 .header {
-    min-width: 100vw;
+    width: 100vw;
     display: flex;
-    margin: 0px 20px;
     justify-content: center;
     align-items: center;
-    /* min-width: 900px; */
-
     position: relative;
 }
 
@@ -62,8 +111,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    clip-path: polygon(0 0, 110% 0, 110% 40%, 0 100%);
-    background-color: rgb(47, 146, 179);
+    clip-path: polygon(0 0, 100% 0, 100% 50%, 0 100%);
+    background-color: var(--primary-color);
     z-index: -1;
 }
 
@@ -105,6 +154,7 @@ body {
     left: 400px;
     color: white;
     font-size: 3rem;
+    max-width: 100vw;
 }
 
 .header .links {
@@ -130,7 +180,7 @@ body {
     font-family: "Playfair Display";
 
     font-size: 2rem;
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .projects-cards {
@@ -192,8 +242,12 @@ body {
 
 .footer{
     display: flex;
-    width: 900px;
-    justify-content: space-between;
+    width: 100vw;
+
+    justify-content: center;
+    background-color: rgb(47, 146, 179);
+
+    padding: 40px 0;
 }
 
 .footer-info {
